k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: sidebet.dylanvh.com
      http:
        paths:
          - path: /discord
            pathType: Prefix
            backend:
              service:
                name: sidebet-discord-bot
                port:
                  number: 8788
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sidebet-api
                port:
                  number: 8787
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sidebet-web
                port:
                  number: 80
    - host: lending.dylanvh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lending
                port:
                  number: 80
    - host: linkding.dylanvh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 9090
    - host: nuke.dylanvh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nuke-app
                port:
                  number: 3000
    - host: portfolio.dylanvh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-app
                port:
                  number: 80
    - host: satskit.dylanvh.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sats-kit-server
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sats-kit-client
                port:
                  number: 80
    - host: ascend.dylanvh.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ascend-api
                port:
                  number: 8787
          - path: /rpc
            pathType: Prefix
            backend:
              service:
                name: ascend-api
                port:
                  number: 8787
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ascend-web
                port:
                  number: 80
    - host: pixelpythons.dylanvh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pixel-pythons
                port:
                  number: 3001
    - host: jellyseerr.dylanvh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
    - host: jelly.dylanvh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
